--- a/package.json
+++ b/package.json
@@ -2,22 +2,25 @@
   "name": "react-peliculas-de-los-videos",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://violetbaggins.github.io/react_con_APIs/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "gh-pages": "^3.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:3000",
-
   "eslintConfig": {
     "extends": "react-app"
   },
